<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:title="@string/button_wish_list"
            android:icon="@drawable/ic_list_white"
            android:id="@+id/bottom_menu_wish_list"
    />

    <item
            android:title="@string/button_wall"
            android:icon="@drawable/ic_wall_white"
            android:id="@+id/bottom_menu_wall"
    />

    <item
            android:title="@string/button_friends"
            android:icon="@drawable/ic_friends_white"
            android:id="@+id/bottom_menu_friends"
    />

    <item
            android:title="@string/button_profile"
            android:icon="@drawable/ic_account_box_white"
            android:id="@+id/bottom_menu_account"
    />

</menu>