<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <include layout="@layout/toolbar_view"/>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/default_padding_layout"
            android:orientation="vertical"
            tools:context=".view.WishEditFragment">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <!-- SCREEN TITLE -->
            <TextView
                    android:text="@string/edit_screen_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/AppTheme.TextView.Titles"/>

            <!-- TITLE edit -->
            <com.google.android.material.textfield.TextInputLayout
                    android:hint="@string/edit_screen_title_hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/wish_edit_input"
                        android:lines="1"
                        android:maxLines="1"
                        android:maxLength="100"
                        android:inputType="text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- CATEGORIES -->
            <Spinner
                    android:id="@+id/categories_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:text=""
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <RadioGroup
                    android:id="@+id/radio_group_privacy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <RadioButton
                        android:checked="true"
                        android:id="@+id/radio_edit_private"
                        android:text="@string/edit_screen_radio_private"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                <RadioButton
                        android:id="@+id/radio_edit_friends"
                        android:text="@string/edit_screen_radio_friends"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                <RadioButton
                        android:id="@+id/radio_edit_world"
                        android:text="@string/edit_screen_radio_public"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                    android:hint="@string/edit_screen_link_hint"
                    android:id="@+id/link_edit_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                        android:lines="1"
                        android:maxLines="1"
                        android:inputType="textUri"
                        android:id="@+id/link_edit_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/description_edit_layout"
                    android:hint="@string/edit_screen_description_hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/description_edit_input"
                        android:maxLines="10"
                        android:inputType="textMultiLine"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
